# J.A.R.V.I.S

./: .env.example  .gitignore  AGENTS.md  BUG_REPORT.md  INFORMATIVE_PAGE.md  LICENSE  PLAN_DESPLIEGUE_CUBEPATH.md  PLAN_GEMMA4_LOCAL.md  PRD.md  ProjectInfo.tsx  README.es.md  README.md  REVISION_TECNICA.md  assign_milestones.sh  calculadora.py  create_issues.sh  download_models.py  install.sh  jarvis-brain-proposal.md  jarvis.spec  main.py  pyproject.toml  random_numbers.py  requirements-desktop.txt  requirements.txt  start.sh  test_payload.json
.gemini/: settings.json
.github/workflows/: build-desktop.yml
adapters/llm/: claude_api_adapter.py  gemini_summarizer.py  groq_summarizer.py  ollama_adapter.py  openrouter_summarizer.py
adapters/stt/: apple_stt.py  faster_whisper_stt.py  ghost_typer.py  mlx_stt.py
adapters/tts/: edge_tts_adapter.py  mac_say_tts.py
apps/jarvis-landing/: README.md  components.json  design-system.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
core/: intent_router.py  platform_utils.py
core/audio/: poc_barge_in.py  vad_listener.py
core/cli/: pty_wrapper.py
core/input/: hotkey_listener.py
core/integration/: poc_phase3.py  poc_phase4.py
core/lexer/: poc_lexer.py
core/screen_reader/: engine.py  vision_fallback.py
core/server/: jarvis_daemon.py
core/session/: claude_code_pty_session.py  jarvis_api_session.py  opencode_pty_session.py
core/tool_dispatch/: dispatcher.py  registry.py
docs/: ROADMAP_VOICE_CLI.md  voice_approvals.md
docs/v1/: ARCHITECTURE_DECISIONS_AND_LOGS.md  CLI_HOOKING_STRATEGY.md  INSTALL.md  PHASE_8_STT_INPUT_PLAN.md  PoC_PLAN.md  (+4 more)
hooks/: after_model.py  notification.py
jarvis/: __init__.py  __main__.py  cli.py  control_panel.py  setup_wizard.py  tray.py
scripts/: generate_icon.py
(+11 files in other folders)
